@@ -1,6 +1,7 @@
 VERSION[1.3.17][2017/03/04]
  * Updated skill data to 2.6
  * Minor update of the passive tree data; this fixes the Storm Weaver pathing
+ * Added many new uniques
 VERSION[1.3.16][2017/03/03]
  * Added a skill part to Lacerate to simulate the target being hit by both slashes
  * Added support for the "Damage while you have no Frenzy Charges" modifier on Daresso's Passion
